<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1c2033"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical">

    <TextView
        android:id="@+id/OF_TopText1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/OptionsTopText1"
        android:textAlignment="center"
        android:textColor="#ffffff"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/OF_IncomeTextTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/OF_TopText1"
        android:background="#27304b"
        android:text="@string/OptionsIncomeText1"
        android:textColor="#ffffff"
        android:textAlignment="center"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/OF_MonthlyIncomeInputField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/OF_IncomeTextTitle"
        android:hint="@string/OptionsIncomeInputText"
        android:ems="7"
        android:textColor="#ffffff"
        android:maxLength="9"
        android:textColorHint="#505050"
        android:imeOptions="actionDone"
        android:inputType="numberDecimal"
        android:textAlignment="center"
        android:background="#27304b"
        android:paddingBottom="10dp" />

    <TextView
        android:id="@+id/OF_ExpensesTextTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/OF_MonthlyIncomeInputField"
        android:layout_marginTop="2dp"
        android:background="#27304b"
        android:textColor="#ffffff"
        android:text="@string/OptionsDeductionsText1"
        android:textAlignment="center"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/OF_MonthlyExpensesInputField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/OF_ExpensesTextTitle"
        android:ems="7"
        android:textColor="#ffffff"
        android:maxLength="9"
        android:textColorHint="#505050"
        android:background="#27304b"
        android:hint="@string/OptionsExpensesInputText"
        android:imeOptions="actionDone"
        android:inputType="numberDecimal"
        android:singleLine="false"
        android:textAlignment="center"
        android:paddingBottom="10dp" />


    <TextView
        android:id="@+id/OF_NetIncomeTextTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/OF_MonthlyExpensesInputField"
        android:layout_marginTop="25dp"
        android:background="#27304b"
        android:textColor="#ffffff"
        android:text="@string/OptionsNetIncomeText1"
        android:textAlignment="center"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/OF_NetIncomeTextField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/OF_NetIncomeTextTitle"
        android:background="#27304b"
        android:textColor="#ffffff"
        android:textAlignment="center"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/OF_MonthlyIncomeInfoText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/OF_NetIncomeTextField"
        android:layout_marginLeft="3dp"
        android:textColor="#ffffff"
        android:text="@string/OptionsIncomeTooltip"
        android:textSize="12sp"
        android:layout_marginStart="3dp" />

    <TextView
        android:id="@+id/OF_MonthlyExpensesInfoText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/OF_MonthlyIncomeInfoText"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="3dp"
        android:layout_marginTop="1dp"
        android:textColor="#ffffff"
        android:text="@string/OptionsExpensesTooltip"
        android:textSize="12sp"
        android:layout_marginStart="3dp" />

</RelativeLayout>