<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorMainBackground"
    android:orientation="vertical"
    android:focusable="true"
    android:focusableInTouchMode="true">
    <TextView
        android:id="@+id/BL_TopTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorWhite"
        android:layout_alignParentTop="true"
        android:paddingTop="1dp"
        android:text="@string/BudgetListText1"
        android:textAlignment="center" />
    <LinearLayout
        android:id="@+id/BL_LegendLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/BL_TopTitle">
        <TextView
            android:id="@+id/BL_LegendText1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="1"
            android:textColor="@color/colorWhite"
            android:text="@string/BudgetLegendText1"
            />
        <TextView
            android:id="@+id/BL_LegendText2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="1"
            android:textColor="@color/colorBudgetAvailable"
            android:text="@string/BudgetLegendText2"
            />
        <TextView
            android:id="@+id/BL_LegendText3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="1"
            android:textColor="@color/colorBudgetSpent"
            android:text="@string/BudgetLegendText3"
            />
    </LinearLayout>
    <ListView
        android:id="@+id/BL_BudgetList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/BL_LegendLayout"
        android:background="@color/colorListBackground"
        android:layout_marginLeft="3dp"
        android:layout_marginRight="3dp"
        android:scrollbars="horizontal" />
</RelativeLayout>