<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <LinearLayout
            android:id="@+id/PurchaseInputFields"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <EditText
                android:id="@+id/PL_PurchaseNameInputField"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/PurchaseInputText1"
                android:imeOptions="actionDone"
                android:inputType="textPersonName"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/PL_PurchaseAmountInputField"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/PurchaseInputText2"
                android:imeOptions="actionDone"
                android:inputType="numberDecimal"
                android:textSize="15sp" />

            <Button
                android:id="@+id/PL_AddPurchaseToList"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Add Purchase"
                android:textAlignment="center"
                android:textSize="7sp" />

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="15dp" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/PurchaseListText1"
            android:textAlignment="center" />

        <ListView
            android:id="@+id/PL_PurchaseList"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:scrollbars="horizontal" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <LinearLayout
            android:id="@+id/TransactionTextFields"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/PurchaseListText2"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/PL_PurchaseTotalAmt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="$ 0000.00" />
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <Button
            android:id="@+id/PL_RemoveLastPurchaseButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/RemoveLastPurchaseButtonText" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <Button
            android:id="@+id/PL_ResetListButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/RemoveAllPurchasesButtonText" />

    </LinearLayout>

</RelativeLayout>